<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/table_row_bg">
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/servname"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/tvbeneficiaryname"/>
    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/nrc_lbl"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/tvbeneficiarynrc"
        android:background="@drawable/table_cell_bg"/>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/fathername"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/tvbeneficiaryfthname"
        android:background="@drawable/table_cell_bg"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/lblbeneficiaryrelation"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/tvbeneficiaryrelationship"
        android:background="@drawable/table_cell_bg"
        />
    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/lblbeneficiaryage"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/tvbeneficiaryage"
        android:background="@drawable/table_cell_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblbeneficiarypercent"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/tvbeneficiarypercent"
        android:background="@drawable/table_cell_bg"/>
</TableRow>