<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/divider"
    android:text="@string/lblbeneficiary"
    android:layout_marginTop="5dp"
    android:id="@+id/titlebeneficiary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebeneficiary"
        android:text="@string/lblbeneficiaryname"
        android:layout_margin="5dp"
        android:id="@+id/lblbeneficiaryname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/lblbeneficiaryname"
        app:layout_constraintTop_toBottomOf="@+id/titlebeneficiary"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="dfjdfadfkkfadfdf"
        android:id="@+id/txtbeneficiaryname"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblbeneficiaryname"
        android:text="@string/lblbeneficiarynrc"
        android:layout_margin="5dp"
        android:id="@+id/lblbeneficiarynrc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/lblbeneficiarynrc"
        app:layout_constraintTop_toBottomOf="@+id/txtbeneficiaryname"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="dfjdfadfkkfadfdf"
        android:id="@+id/txtbeneficiarynrc"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblbeneficiarynrc"
        android:text="@string/lblbeneficiaryfthname"
        android:layout_margin="5dp"
        android:id="@+id/lblbeneficiaryfthname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/lblbeneficiaryfthname"
        app:layout_constraintTop_toBottomOf="@+id/txtbeneficiarynrc"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="dfjdfadfkkfadfdf"
        android:id="@+id/txtbeneficiaryfthname"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblbeneficiaryfthname"
        android:text="@string/lblbeneficiaryrelation"
        android:layout_margin="5dp"
        android:id="@+id/lblbeneficiaryrelationship"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/lblbeneficiaryrelationship"
        app:layout_constraintTop_toBottomOf="@+id/txtbeneficiaryfthname"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="dfjdfadfkkfadfdf"
        android:id="@+id/txtbeneficiaryrelationship"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblbeneficiaryrelationship"
        android:text="@string/lblbeneficiaryage"
        android:layout_margin="5dp"
        android:id="@+id/lblbeneficiaryage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/lblbeneficiaryage"
        app:layout_constraintTop_toBottomOf="@+id/txtbeneficiaryrelationship"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="dfjdfadfkkfadfdf"
        android:id="@+id/txtbeneficiaryage"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblbeneficiaryage"
        android:text="@string/lblbeneficiarypercent"
        android:layout_margin="5dp"
        android:id="@+id/lblbeneficiarypercent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/lblbeneficiarypercent"
        app:layout_constraintTop_toBottomOf="@+id/txtbeneficiaryage"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="dfjdfadfkkfadfdf"
        android:id="@+id/txtbeneficiarypercent"
        android:textColor="@color/colorPrimaryDark"/>
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/colorPrimaryDark"
    android:layout_marginTop="5dp"
    android:id="@+id/divider"></View>
</androidx.constraintlayout.widget.ConstraintLayout>
