<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/card_bg"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LifeInsuranceFirst"
    android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
   >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblpassexist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp"
            android:id="@+id/chkpassexist"
            android:textColor="@color/colorAccent"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkpassexist"
        android:paddingTop="5dp"
        android:id="@+id/radiopassexist">

        <RadioButton
            android:id="@+id/rdbtnexist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/exist" />

        <RadioButton
            android:id="@+id/rdbtnnotexist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notexist"
            android:checked="true"/>
    </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiopassexist"
            android:id="@+id/edt_previous_policyid"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="ယခင်ပေါ်လစီအမှတ်"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:background="@drawable/customer_bg"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_previous_policyid"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lblacceptorreject"
            android:id="@+id/chkacceptreject"
            android:textColor="@color/colorAccent"
            />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkacceptreject"
        android:paddingTop="5dp"
        android:id="@+id/radioacceptrej">

        <RadioButton
            android:id="@+id/rdbtnaccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/exist" />

        <RadioButton
            android:id="@+id/rdbtnrej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notexist"
            android:checked="true"/>
    </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioacceptrej"
            android:layout_marginTop="10dp"
            android:text="@string/lblanydrug"
            android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"
           android:lineSpacingExtra="5dp"
            android:id="@+id/chkanydrag"
            android:textColor="@color/colorAccent"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkanydrag"
        android:id="@+id/radiodrugs">

        <RadioButton
            android:id="@+id/rdbtnacceptdrug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/exist" />

        <RadioButton
            android:id="@+id/rdbtnrejdrug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notexist"
            android:checked="true"/>
    </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbldiseaselist"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/radiodrugs"
            android:id="@+id/lbldiseaselist"
            android:textColor="@color/colorAccent"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/cardview_light_background"
            app:layout_constraintTop_toBottomOf="@+id/lbldiseaselist"
            app:layout_constraintBottom_toTopOf="@+id/btnsave_sinsurance"
            android:id="@+id/recyclerdiseaseList"/>

    <Button
        android:id="@+id/btnsave_sinsurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/lblcontinue"
        android:background="@drawable/roundedbutton_bg"
        android:textColor="@color/btnforeColor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>