<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/card_bg"
    android:layout_margin="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.OtherFragment"
    android:layout_marginBottom="16dp">
    <TextView
        android:id="@+id/lbl_otherfacts_listitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_otherfacts"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_otherfacts_listitem"
        android:hint="@string/supply_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:id="@+id/edt_otherfacts_listitem"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:background="@drawable/customer_bg"
        android:paddingLeft="10dp"
        android:inputType="textNoSuggestions"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
    <TextView
        android:id="@+id/lbl_otherpercents_listitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_otherpercents"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_otherfacts_listitem" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_otherpercents_listitem"
        android:hint="@string/supply_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/edt_otherpercents_listitem"
        android:singleLine="true"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:background="@drawable/customer_bg"
        android:paddingLeft="10dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btndelete_listitem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_otherpercents_listitem"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnaddother"
        android:background="@color/btnbgColor"
        android:textColor="@color/btnforeColor"
        android:src="@drawable/btn_delete"
        />

    <LinearLayout
        android:id="@+id/other_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="500dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>